*fixed tests